--- a/kafka10/build.gradle
+++ b/kafka10/build.gradle
@@ -8,7 +8,7 @@ jar {
 }
 
 dependencies {
-    compile group: 'org.apache.kafkaMirror', name: 'kafkaMirror-clients', version: '1.1.0'
+    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '1.1.0'
     compile project(':common')
 
 }
